# idle-battle

./: .gitignore  Anchor.toml  README.md  package.json
app-ts/: package.json
app-ts/src/: index.ts
programs/idle-battle/: Cargo.toml
programs/idle-battle/src/: error.rs  lib.rs  state.rs  utils.rs
programs/idle-battle/src/instructions/: attack.rs  battle.rs  initialize.rs  initialize_hero.rs  mod.rs  recall.rs  reset_hero_stats.rs  runaway.rs  stake.rs  train.rs  unstake.rs
tests/: idle-battle.test.ts
